force-app/main/default/objects/HCP__c/HCP__c.object-meta.xml
<CustomObject>
    <label>HCP</label>
    <nameField>
        <label>HCP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HCPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>