force-app/main/default/objects/HCP__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address of the healthcare provider</description>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>