force-app/main/default/objects/HCP__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <description>Medical license number of the healthcare provider</description>
    <label>License Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>