force-app/main/default/objects/HCP__c/fields/Territory2__c.field-meta.xml
<CustomField>
    <fullName>Territory2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory2</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>HCPs (Territory2)</relationshipLabel>
    <relationshipName>HCPs</relationshipName>
    <type>Lookup</type>
</CustomField>