force-app/main/default/objects/HCP__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Healthcare Providers</relationshipLabel>
    <relationshipName>Healthcare_Providers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>