force-app/main/default/objects/HCP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Territory__c</columns>
    <columns>Specialty__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Healthcare Providers</label>
</ListView>